--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   retrofit: ^4.9.0
   json_annotation: ^4.9.0
   flutter_bloc: ^9.1.1
-
+  bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
