--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,33 +28,21 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
-<<<<<<< HEAD
-  flutter_otp_text_field: ^1.5.1+1
   go_router: ^17.0.1
   retrofit: ^4.9.1
-=======
   flutter_otp_text_field:
->>>>>>> 1586b8a4f223ad97105789d8d0a2a87229fcd297
 
 dev_dependencies:
   bloc_test: ^10.0.0
-  build_runner: ^2.10.4
+  build_runner: ^2.7.1
+  retrofit_generator: ^10.2.0
   equatable: ^2.0.7
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-<<<<<<< HEAD
-=======
-  flutter_lints: ^5.0.0
-  build_runner: ^2.6.0
->>>>>>> 1586b8a4f223ad97105789d8d0a2a87229fcd297
   injectable_generator: ^2.4.1
   json_serializable: ^6.8.0
   mockito: ^5.5.0
-<<<<<<< HEAD
-=======
-  bloc_test: ^10.0.0
->>>>>>> 1586b8a4f223ad97105789d8d0a2a87229fcd297
   flutter_svg: ^2.2.0
 
 # For information on the generic Dart part of this file, see the
