--- a/.github/workflows/pr-name-validation.yml
+++ b/.github/workflows/pr-name-validation.yml
@@ -1,26 +1,37 @@
-name: Validate PR Name
+name: Validate PR Title
 
 on:
   pull_request:
     types: [opened, edited, reopened, synchronize]
 
 jobs:
-  validate-pr-name:
+  validate-pr-title:
     runs-on: ubuntu-latest
     steps:
-      - name: Validate PR title
+      - name: Validate PR title format
         uses: actions/github-script@v6
         with:
           script: |
             const prTitle = context.payload.pull_request.title;
+            /*
+              Format:
+              type(scope): TICKET-task-name
 
-            const pattern = /^(feature|fix|chore|docs|refactor)\/SCRUM-\d+/;
+              Example:
+              feat(ECOM-27): ECOM-27-initialize-project
+            */
+            const pattern = /^(fix|release|feat|hotfix|build|test)\((JIRA-\d+|[A-Z]+-\d+)\):\s\2-[a-zA-Z0-9-]+$/;
 
             if (!pattern.test(prTitle)) {
               core.setFailed(
-                '❌ PR name "' + prTitle + '" is invalid.\n' +
-                'Hint: Use "type/SCRUM-<number>", e.g., "feature/SCRUM-123 - add login page"'
+                '❌ Invalid PR title: "' + prTitle + '"\n\n' +
+                'Expected format:\n' +
+                'type(scope): TICKET-task-name\n\n' +
+                'Allowed types: fix, release, feat, hotfix, build, test\n' +
+                'Allowed scopes: JIRA-<number> or PROJECT-<number>\n\n' +
+                'Example:\n' +
+                'feat(ECOM-27): ECOM-27-initialize-project'
               );
             } else {
-              console.log('✅ PR name "' + prTitle + '" is valid.');
+              console.log('✅ PR title is valid:', prTitle);
             }
