--- a/.github/workflows/validate_branch_name.yaml
+++ b/.github/workflows/validate_branch_name.yaml
@@ -16,17 +16,17 @@ jobs:
           BRANCH_NAME="${GITHUB_REF#refs/heads/}"
           echo "Checking branch name: $BRANCH_NAME"
 
-          REGEX="^(feature|bugfix|hotfix|release|github)\/[a-z]+(-[a-z]+)*$"
+          REGEX="^(feature|bugfix|hotfix|release)\/[A-Z]+-[0-9]+-[a-z]+(-[a-z]+)*$"
 
           if [[ ! "$BRANCH_NAME" =~ $REGEX ]]; then
             echo "❌ Invalid branch name!"
-            echo "Expected format: <prefix>/<task-name>"
-            echo "Allowed prefixes: feature, bugfix, hotfix, release, github"
-            echo "Example: feature/init-project"
+            echo "Expected format: <prefix>/<Ticket-Id-TicketNum>/<task-name>"
+            echo "Allowed prefixes: feature, bugfix, hotfix, release"
+            echo "Example: feature/ECOM-27-initialize-project"
             exit 1
           fi
 
       - name: Validate Branch Name Action
         uses: goshencollege/validate-branch-name@v1.0.1
         with:
-          pattern: "^(feature|bugfix|hotfix|release|github)\\/[a-z]+(-[a-z]+)*$"
+          pattern: "^(feature|bugfix|hotfix|release)\\/[A-Z]+-[0-9]+-[a-z]+(-[a-z]+)*$"
