--- a/.github/workflows/lint-validation-actions.yml
+++ b/.github/workflows/lint-validation-actions.yml
@@ -14,12 +14,14 @@ jobs:
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
+        with:
+          flutter-version: stable   
 
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Run Flutter analyze
-        run: flutter analyze
-
       - name: Check code formatting
         run: flutter format --set-exit-if-changed .
+
+      - name: Run Flutter analyze
+        run: flutter analyze
