--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,55 +1,45 @@
 name: flower_shop
-description: "A new Flutter project."
-publish_to: "none"
-
-version: 1.0.0+1
-
+description: A new Flutter project.
 environment:
   sdk: ">=3.8.1 <4.0.0"
-  flutter: ">=3.10.0"  # ADD THIS LINE
+  flutter: ">=3.10.0"
 
 dependencies:
-  bloc: ^9.0.0
-  cupertino_icons: ^1.0.8
-  dio: ^5.4.0
-  easy_localization: ^3.0.8
-  equatable: ^2.0.7  # MOVE from dev_dependencies to dependencies
   flutter:
     sdk: flutter
+
+  bloc: ^9.0.0
   flutter_bloc: ^9.1.1
-  flutter_otp_text_field: ^1.3.4  # ADD VERSION
-  flutter_svg: ^2.2.0  # MOVE from dev_dependencies to dependencies
-  get_it: 9.2.0  # ADD THIS (needed for injectable)
-  go_router: ^17.0.0
-  injectable: 2.7.0  # ADD THIS
-  intl: ^0.20.2
-  json_annotation: ^4.9.0
-  matcher: ^0.12.17
-  pretty_dio_logger: ^1.4.0
-  provider: ^6.1.1  # ADD THIS if you use Provider
+  equatable: ^2.0.7
+
+  dio: ^5.4.0
   retrofit: ^4.9.1
+  pretty_dio_logger: ^1.4.0
+
+  get_it: 9.2.0
+  injectable: ^2.7.0
+
+  json_annotation: ^4.9.0
+
+  easy_localization: ^3.0.8
+  intl: ^0.20.2
+
+  go_router: ^17.0.0
   shared_preferences: ^2.5.3
+
+  flutter_svg: ^2.2.0
   shimmer: ^3.0.0
+  skeletonizer: ^2.1.2
+  flutter_otp_text_field: ^1.5.1
+
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
-  bloc_test: ^10.0.0
-  build_runner: ^2.7.1
-  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  injectable_generator: ^2.4.1
-  json_serializable: ^6.8.0
-  mockito: ^5.5.0
-  retrofit_generator: ^10.2.0
 
-flutter:
-  uses-material-design: true
-
-  assets:
-    - assets/images/
-    - assets/translations/
-
-easy_localization:
-  path: assets/translations
-  fallback_locale: en
-  supported_locales: [en, ar]
+  bloc_test: ^10.0.0
+  build_runner: ^2.10.5
+  json_serializable: ^6.11.4
+  mockito: ^5.6.3
+  flutter_lints: ^5.0.0
