--- a/.github/workflows/unit-testing-github-action.yml
+++ b/.github/workflows/unit-testing-github-action.yml
@@ -25,7 +25,10 @@ jobs:
        
       - name: Install dependencies
         run: flutter pub get
+      
 
+      - name: Generate Code (build_runner)
+        run: dart run build_runner build --delete-conflicting-outputs  
        
       
       - name: Run unit tests
