--- a/.github/workflows/unit-testing-github-action.yml
+++ b/.github/workflows/unit-testing-github-action.yml
@@ -22,12 +22,16 @@ jobs:
         with:
           channel: 'stable'
 
-       
+
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Clean Generated Code
+        run: flutter pub run build_runner clean
+
       - name: Generate Code (build_runner)
-        run: dart run build_runner build  
+        run: flutter pub run build_runner build --delete-conflicting-outputs
+
       
       - name: Run unit tests
         run: flutter test
