--- a/.github/workflows/unit-testing-github-action.yml
+++ b/.github/workflows/unit-testing-github-action.yml
@@ -1,7 +1,5 @@
 name: Verify PR Unit Tests
 
-# هذا الجزء يحدد متى يعمل الـ Action
-# هنا سيعمل عند فتح أي Pull Request أو تعديله
 on:
   pull_request:
     types: [opened, synchronize, reopened]
@@ -12,16 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      
       - name: Checkout code
         uses: actions/checkout@v4
 
-       
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-
 
       - name: Install dependencies
         run: flutter pub get
@@ -32,6 +27,8 @@ jobs:
       - name: Generate Code (build_runner)
         run: flutter pub run build_runner build --delete-conflicting-outputs
 
-      
+      - name: Generate Localization Keys
+        run: flutter pub run easy_localization:generate -S assets/translations -f keys -o locale_keys.g.dart
+
       - name: Run unit tests
         run: flutter test
