--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shimmer: ^3.0.0
   skeletonizer: ^2.1.2
   image_picker: ^1.2.1
+  url_launcher: ^6.1.10  
 
 dev_dependencies:
   bloc_test: ^10.0.0
@@ -39,11 +40,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   injectable_generator: ^2.9.1
-  json_serializable: 6.11.2
+  json_serializable: ^6.11.2
   mockito: ^5.6.3
   retrofit_generator: ^10.2.1
   mocktail: ^1.0.3
-
 
 flutter:
   uses-material-design: true
