--- a/.github/workflows/firebase-distribution.yml
+++ b/.github/workflows/firebase-distribution.yml
@@ -22,17 +22,25 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'  
-
+          channel: 'stable'
 
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Run tests
-        run: flutter test
+      - name: Clean Generated Code
+        run: flutter pub run build_runner clean
+
+      - name: Generate Code (build_runner)
+        run: dart run build_runner build --delete-conflicting-outputs
+
+      - name: Generate Localization Keys
+        run: flutter pub run easy_localization:generate -S assets/translations -f keys -o locale_keys.g.dart
 
       - name: Build APK
         run: flutter build apk --release
+
+      - name: Run tests
+        run: flutter test
 
       - name: Extract release notes and testers from PR
         uses: actions/github-script@v6
